avoid too big pictures

--- a/frontend/src/utils/single-entry/single-entry.component.scss
+++ b/frontend/src/utils/single-entry/single-entry.component.scss
@@ -15,6 +15,7 @@
     img {
         margin: auto;
         max-width: 100%;
+        max-height: 75vh;
     }
     markdown {
         margin-left: 10%;
